--- a/css/style.css
+++ b/css/style.css
@@ -33,20 +33,20 @@ body {
 .main {
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
+    width: 300px;
 }
 
 
 
 #kinna {
+    width: 200px;
+    height: 48px;
     font-size: 2rem;
     font-style: italic;
+    text-align: center;
     margin-bottom: 3rem;
-    background-color: black;
+    background: no-repeat url(background.svg);
     color: white;
-    position: relative;
-    left: -5rem;
-    padding-left: 5rem;
 }
 
 .link {
@@ -62,6 +62,10 @@ body {
     background-color: black;
     color: white;
     font-weight: 400;
+}
+
+.link span {
+    color: white;
 }
 
 h3 {
