--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,10 +18,6 @@
     <!-- <link href='//fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="/static/style/kinna.css">
     
-    <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/images/apple-touch-icon-precomposed.png">
-    <link rel="shortcut icon" href="/public/images/favicon.ico">
-
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
@@ -52,10 +48,6 @@
 
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-    <link rel="shortcut icon" type="image/x-icon" href="/public/images/favicon.ico" />
-    <link rel="icon" type="image/png" href="//images.quru.com/image?src=kwf/KWRoundel3-500.png&format=png&width=32" />
-    <link rel="logo" type="image/png" href="//images.quru.com/image?src=kwf/KWRoundel3-500.png&width=80&height=80&format=png" />
-    <!-- <link rel="icon" type="image/png" href="/icon-195px.png" /> -->
     <meta name="msapplication-TileImage" content="//images.quru.com/image?src=kwf/KWRoundel3-500.png&width=144&height=144&format=png" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="application-name" content="Create" />
@@ -71,34 +63,11 @@
     <meta name="geo.placename" content="Pulborough, England" />
     <meta name="geo.position" content="50.961;-0.514" /> <!-- Latitude; Longitude -->
 
-    <!-- non-retina iPhone pre iOS 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="//images.quru.com/image?src=/kwf/KWFRibbonRockingChair/KWF%20Walnut%20Ribbon%20front%2034.jpeg&right=0.85625&left=0.08438&width=57&height=57&format=png" />
-    <!-- non-retina iPad pre iOS 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="//images.quru.com/image?src=/kwf/KWFRibbonRockingChair/KWF%20Walnut%20Ribbon%20front%2034.jpeg&right=0.85625&left=0.08438&width=72&height=72&format=png" />
-    <!-- non-retina iPad iOS 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="//images.quru.com/image?src=/kwf/KWFRibbonRockingChair/KWF%20Walnut%20Ribbon%20front%2034.jpeg&right=0.85625&left=0.08438&width=76&height=76&format=png" />
-    <!-- retina iPhone pre iOS 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="//images.quru.com/image?src=/kwf/KWFRibbonRockingChair/KWF%20Walnut%20Ribbon%20front%2034.jpeg&right=0.85625&left=0.08438&width=114&height=114&format=png" />
-    <!-- retina iPhone iOS 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="//images.quru.com/image?src=/kwf/KWFRibbonRockingChair/KWF%20Walnut%20Ribbon%20front%2034.jpeg&right=0.85625&left=0.08438&width=120&height=120&format=png" />
-    <!-- retina iPad pre iOS 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="//images.quru.com/image?src=/kwf/KWFRibbonRockingChair/KWF%20Walnut%20Ribbon%20front%2034.jpeg&right=0.85625&left=0.08438&width=144&height=144&format=png" />
-    <!-- retina iPad iOS 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="//images.quru.com/image?src=/kwf/KWFRibbonRockingChair/KWF%20Walnut%20Ribbon%20front%2034.jpeg&right=0.85625&left=0.08438&width=152&height=152&format=png" />
-
-    <!-- iPhone STARTUP-->
-    <link rel="apple-touch-startup-image" media="(device-width: 320px)" href="/images/mobile-OS/startup/320x460.png" />
-    <!-- iPhone (Retina) STARTUP-->
-    <link rel="apple-touch-startup-image" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" href="/images/mobile-OS/startup/640x920.png" />
-    <!-- iPad (portrait) STARTUP-->
-    <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: portrait)" href="/images/mobile-OS/startup/768x1004.png" />
-    <!-- iPad (landscape) STARTUP-->
-    <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: landscape)" href="/images/mobile-OS/startup/1024x748.png" />
-    <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: landscape)" href="/images/mobile-OS/startup/1496x2048.png" />
-    <!-- iPad (Retina, portrait) STARTUP-->
-    <link rel="apple-touch-startup-image" media="(device-width: 1536px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="/images/mobile-OS/startup/1536x2008.png" />
-    <!-- iPad (Retina, landscape) STARTUP-->
-    <link rel="apple-touch-startup-image" media="(device-width: 1536px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="/images/mobile-OS/startup/1496x2048.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+    <link rel="manifest" href="/static/images/site.webmanifest">
 
     <!--[if lt IE 9]>
         <script src="js/html5shiv.js"></script>
