--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	</div>
 </noscript>
 
-<body>
+<body markdown="1">
 {{ content }}
     <script type="text/javascript">
         /* Add Javascript here */
