--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -14,10 +14,11 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 {% if page.default-source == "bandcamp" %}<a href="{{ site.bandcamp }}/{{ post.bandcamp }}" target="_blank">
-    {% elsif page.default-source == "soundcloud" %}<a href="{{ site.soundcloud }}/{{ post.soundcloud }}" target="blank">{% endif %}
-    <img src="{{ page.image }}" alt="{{ page.title }}">
-    </a>
-    
-{{ page.description }}
+{% elsif page.default-source == "soundcloud" %}<a href="{{ site.soundcloud }}/{{ post.soundcloud }}" target="blank">
+{% else %}<a href="{{ site.bandcamp }}/{{ post.bandcamp }}" target="_blank"></a>{% endif %}
+<img src="{{ page.image }}" alt="{{ page.title }}">
+</a>
+        
+{{ content }}
 
 {% endif %}
