--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
 <head>
 {% include analytics.html %}
@@ -12,7 +11,7 @@
 	</div>
 </noscript>
 
-<body markdown="1">
+<body>
 {{ content }}
     <script type="text/javascript">
         /* Add Javascript here */
