--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -10,7 +10,7 @@ layout: default
     </div>
 </div>
 
-<div class="main" markdown="1">
+<div class="content" markdown="1">
 
 {% if page.title == "Music" %}{{ content }}{% else %}
 
