--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,9 @@
     </title>
 
     <!-- CSS -->
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
-    <!-- <link href='//fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>-->
+    <style>
+     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
+    </style>
     <link rel="stylesheet" href="/static/style/kinna.css">
     
     <!-- RSS -->
