--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,17 @@
 </noscript>
 
 <body>
+<div id="bg">
+    <video id="bgvideo" autoplay>
+        <source src="/static/videos/background.webm" type="video/webm"> 
+        <source src="/static/videos/background.ogv" type="video/ogg"> 
+        <source src="/static/videos/background.mp4" type="video/mp4">
+        <source src="/static/videos/background.3gp" type="video/3gp">
+        Your browser does not support the video tag.
+    </video>
+    
+</div>
+
 {{ content }}
     <script type="text/javascript">
         /* Add Javascript here */
