News & contact. Formatting

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,10 @@
-<a id='music' class='link' href='/music/index.html'><span class='details'>Listen to my music</span>music</a>
-<a id='film' class='link' href='/film/index.html'><span class='details'>Watch my films</span>film</a>
-<a id='news' class='link' href='/news/index.html'><span class='details'>See my latest news</span>news</a>
-<a id='about' class='link' href='/about.html'><span class='details'>All about Kinna</span>about</a>
-<a id='contact' class='link' href='/contact.html'><span class='details'>Fill in a contact form</span>contact</a>
+<div id="menuframe">
+    <div id="menu">
+        <a id="kinna" class="logo link" href="/"><span class="details">Back to main page</span>Kinna</a>
+        <a id='music' class='link' href='/music/index.html'><span class='details'>Listen to my music</span>music</a>
+        <a id='film' class='link' href='/film/index.html'><span class='details'>Watch my films</span>film</a>
+        <a id='news' class='link' href='/news/index.html'><span class='details'>See my latest news</span>news</a>
+        <a id='about' class='link' href='/about.html'><span class='details'>All about Kinna</span>about</a>
+        <a id='contact' class='link' href='/contact.html'><span class='details'>Fill in a contact form</span>contact</a>
+    </div>
+</div>
