--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -1,20 +1,13 @@
 ---
 layout: default
 ---
-{% capture currenttitle %}{{ page.title }}{% endcapture %}
-    <div class="news">
-        <h1 class="post-title">{{ currenttitle }}</h1>
+
+<h1> {{ page.title }}</h1>
+
+<div class="date"> {{ page.date | date: "%d %b %Y"}}</div>
+
+<img src="{{ page.image }}" alt="{{ page.title }}" class="newsimage" id="img-{{ page.title }}"
+
 {{ content }}
-
-
-        <h3>Earlier news</h3>
-        <div class="related">
-            <div class="grid clearfix">
-                {% assign newslist = site.news | sort: "date" %}{% assign newslist = newslist | reverse %}{% for post in newslist %}{% if post.title != "News" %}{% if post.title !=  currenttitle %}
-                {% include cell.html %}
-                {% endif %}{% endif %}{% endfor %}
-            </div>
-        </div>
-    </div>
 
 
