--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,5 @@
 <div id="menuframe">
+    <a href="#" id="show_nav" title="Show navigation"></a>
     <div id="menu">
         <a id="kinna" class="logo link" href="/"><span class="details">Back to main page</span>Kinna</a>
         <a id='music' class='link' href='/music/index.html'><span class='details'>Listen to my music</span>music</a>
