--- a/_layouts/first.html
+++ b/_layouts/first.html
@@ -12,15 +12,15 @@
 </noscript>
 
 <body>
-    <!-- <div id="bg">
-         <video id="bgvideo" autoplay muted loop>
-         <source src="/static/videos/kinna30s-720p.webm" type="video/webm"> 
-         <source src="/static/videos/kinna30s-720p.ogv" type="video/ogg"> 
-         <source src="/static/videos/kinna30s-720p.mp4" type="video/mp4">
-         <source src="/static/videos/kinna30s-720p.3gp" type="video/3gp">
-    Your browser does not support the video tag.
+<div id="bg">
+    <video id="bgvideo" autoplay muted loop>
+        <source src="/static/videos/kinna30s-720p.webm" type="video/webm"> 
+        <source src="/static/videos/kinna30s-720p.ogv" type="video/ogg"> 
+        <source src="/static/videos/kinna30s-720p.mp4" type="video/mp4">
+        <!-- <source src="/static/videos/kinna30s-720p.3gp" type="video/3gp"> -->
+        Your browser does not support the video tag.
     </video>
-    </div> -->
+</div>
 
 {% include menu.html %}
 
