--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -8,6 +8,6 @@ layout: default
 
 <img src="{{ page.image }}" alt="{{ page.title }}" class="newsimage" id="img-{{ page.title }}"
 
-{{ content }}
+{{ Content }}
 
 
