--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 
     <!-- CSS -->
     <style>
-     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
+     @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,200;0,400;1,200&display=swap');
     </style>
     <link rel="stylesheet" href="/static/style/kinna.css">
     
@@ -39,6 +39,7 @@
     </script>
     <!--<![endif]-->
 
+    <script src="/public/js/kinna.js" type="text/javascript"></script>
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
