--- a/_includes/newsblock.html
+++ b/_includes/newsblock.html
@@ -1,4 +1,5 @@
-<div class="item" id="news_{{ post.title | remove: ' ' }}">
-<a href="{{ post.url }}" class="item_title">{{ post.title }}</a>
-<a href="{{ post.url }}" class="item_image"><img src="{{ post.image }}" alt="{{ post.title }}"/></a>
+<div class="news" id="news_{{ post.title | remove: ' ' }}">
+    <div class="item_title"><div class="title_text">{{ post.title }}</div><div class="date">{{ post.date | date: "%d %b %Y" }}</div></div>
+  <div class="item_image"><img src="{{ post.image }}" alt="{{ post.title }}"/></div>
+  <div class="item_body">{{ post.content }}</div>
 </div>
