--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
     </script>
     <!--<![endif]-->
 
-    <script src="/public/js/kinna.js" type="text/javascript"></script>
+    <script src="/static/js/kinna.js" type="text/javascript"></script>
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
