--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,11 +1,15 @@
 <div id="menuframe">
     <a href="#" id="show_nav" title="Show navigation"></a>
-    <div id="menu">
-        <a id="kinna" class="logo link" href="/"><span class="details">Back to main page</span>Kinna</a>
-        <a id='music' class='link' href='/music/index.html'><span class='details'>Listen to my music</span>music</a>
-        <a id='film' class='link' href='/film/index.html'><span class='details'>Watch my films</span>film</a>
-        <a id='news' class='link' href='/news/index.html'><span class='details'>See my latest news</span>news</a>
-        <a id='about' class='link' href='/about.html'><span class='details'>All about Kinna</span>about</a>
-        <a id='contact' class='link' href='/contact.html'><span class='details'>Fill in a contact form</span>contact</a>
+    <div id="nav-center">
+        <div id="kinna-logo" class="logo"><a href="/" class="link"><span class='details'>Back to the home page</span><img alt="Kinna" src="/static/images/Kinna.png" width="100px" height="51px"></a></div>
+        <div id="nav">
+            <ul id="menu">
+                <li id="menu_music"><a id='music' class='link' href='/music/index.html'><span class='details'>Listen to my music</span>music</a></li>
+                <li id="menu_film"><a id='film' class='link' href='/film/index.html'><span class='details'>Watch my films</span>film</a></li>
+                <li id="menu_news"><a id='news' class='link' href='/news/index.html'><span class='details'>See my latest news</span>news</a></li>
+                <li id="menu_about"><a id='about' class='link' href='/about.html'><span class='details'>All about Kinna</span>about</a></li>
+                <li id="menu_contact"><a id='contact' class='link' href='/contact.html'><span class='details'>Fill in a contact form</span>contact</a></li>
+            </ul>
+        </div>
     </div>
 </div>
