--- a/static/style/kinna.css
+++ b/static/style/kinna.css
@@ -28,11 +28,15 @@ html {
    Bottom: #f0eafd */
 
 body {
-    padding-top: 10rem;
-    background-image: linear-gradient(#f9f1fe, #f0eafd);
-    /*background: url(/static/images/WebsiteStill_1.1.1.jpg);*/
+    margin: 0 auto;
+    /*background-image: linear-gradient(#f9fff, #f5fff);*/
+    background: url(/static/images/background_1.1.2.png);
     background-size: cover;
     height: 100%;
+}
+
+body#child {
+    margin: 0 auto;
 }
 
 hr {
@@ -65,18 +69,33 @@ hr {
 
 #menuframe {
     width: 100%;
-    height: 13rem;
-    text-align: center;
+    /*     padding: 0 2rem 0 2rem; */
+    margin: auto;
+    height: 234px;
     position: fixed;
     top: 0;
     z-index: 300;
-    background-image: url(/static/images/mask.png);
+    background-image: url(/static/images/mask_1.1.2.png);
+}
+
+#nav-center {
+    width: 100%;
+    /*     max-width: 38rem; */
+    /*     margin: 4rem auto 0 auto; */
+    margin: auto;
+    padding: 2rem 0;
 }
 
 #menu {
     padding-top: 7rem;
-    position: relative;
-    left: -9rem;
+    /* position: relative;
+       left: -9rem; */
+}
+
+.logo {
+    width: 10rem;
+    text-decoration: none;
+    display: inline-block;
 }
 
 a#show_nav {
@@ -85,7 +104,7 @@ a#show_nav {
 	width: 30px;
 	height: 30px;
 	margin-top: 1rem;
-	margin-right: 30px;
+	margin-right: 50px;
 	background-image: url(/static/images/menu.png);
 }
 
@@ -97,9 +116,8 @@ a#show_nav {
 }
 
 .link {
-    width: 5rem;
-    text-align: left;
-    display: inline-block;
+    /*     width: 5rem; */
+    /*     text-align: left; */
     color: black;
     text-decoration: none;
 }
@@ -112,19 +130,16 @@ a#show_nav {
     color: black;
 }
 
-.logo {
-    width: 8rem;
-    font-weight: 400;
-    text-decoration: none;
-    display: inline-block;
+#content {
+    height: 100%;
+    padding: 234px 2rem 3rem 2rem;
+    /*     z-index: 200; */
+    margin: auto auto;
 }
 
-#content {
-    width: 36rem;
-    height: 100%;
-    padding-top: 3rem;
-    z-index: 200;
-    margin: auto auto;
+#content-width {
+    max-width: 38rem;
+    margin: auto;
 }
 
 #content h1 {
@@ -186,6 +201,7 @@ a#show_nav {
 }
 
 .news {
+    width: 100%;
     padding-bottom: 1rem;
     margin-bottom: 2rem;
     border-bottom-width: 2px;
@@ -209,7 +225,7 @@ a#show_nav {
 
 
 form input[type="string"], form input[type="email"], textarea {
-    width: 100%;
+    max-width: 100%;
     box-shadow: inset 0 1px 2px #DDD, 0 1px 0 #FFF;
     border: 1px solid #CCC;
     border-radius: 0.5rem;
@@ -237,40 +253,24 @@ textarea {
 
 button {
     width: 10rem;
-    margin: 1rem 0 0 10rem;
+    height: 3rem;
+    margin-top: 1rem;
+    font-family: 'Be Vietnam Pro', Geneva, sans-serif;
+    font-size: 1rem;
+    background-color: #b9f5ff;
+    border-radius: 10px;
+    border-color: #dcf1f4;
 }
 
-# embed content
+/* embed content */
 
 iframe .sound__artwork {
-    dislay: none !important;
+    display: none !important;
 }
 
 .sound__content {
     left: 0 !important;
 }
-
-
-@media screen and (max-width : 760px){
-	/*Make dropdown links appear inline*/
-	body {
-		width: 92%;
-		max-width: none;
-		margin-top: 0;
-	}
-
-
-}
-
-@media only screen and (min-width : 700px){
-
-}
-
-
-@media only screen and (min-width: 960px){
-
-}
-
 
 @media only screen and (min-width: 760px){
 
@@ -281,14 +281,16 @@ a#show_nav {
 }
 
 #nav {
-	float: left;
 	position:  relative;
 	top: -4.5rem;
-	padding-top: 34px;
-	max-height: inherit;
-	width:  100%;
+	padding-top: 47px;
+    padding-left: 10rem;
 }
 
+    #nav-center {
+        padding-left: 2rem;
+    }
+    
 #nav > a {
 	display: none;
 	height: 40px;
@@ -298,7 +300,7 @@ a#show_nav {
     margin: 0;
     padding: 0;
     border: none;
-    float:  right;
+    /*     float:  right; */
 }
 
 
@@ -412,3 +414,122 @@ ul#menu li a:hover, ul#menu ul li a:hover {
 /* @end */
 
 }
+
+
+@media screen and (max-width : 880px){
+	/*Make dropdown links appear inline*/
+	body {
+		max-width: 810px;
+		margin-top: 0;
+	}
+
+    #menuframe {
+        padding-left: 2rem;
+    }
+
+    #menu {
+        padding-top: 4rem;
+        left: 0;
+        margin: 0 auto;
+    }
+
+    img.cover {
+        width: 100%;
+    }
+
+    #nav ul#menu {
+        list-style-type: none;
+        position: relative;
+        top: -5px;
+        margin: 0;
+        padding: 0;
+        border: none;
+        text-align: right;
+    }
+
+    #nav ul#menu li {
+        /*         float: right; */
+        padding: 0;
+    }
+}
+
+@media only screen and (max-width: 760px){
+    #menuframe {
+        height: 150px;
+        background-position: center bottom;
+    }
+
+    #nav-center {
+        margin-top: 2rem;
+    }
+
+    #nav {
+        display: none;
+        transition-property: max-height;
+        transition-duration: 0s;
+        overflow: hidden;
+    }
+
+    #nav.show {
+        display: block;
+        max-height: 360%;
+        width: 6rem;
+        padding: 1rem 36px 1rem 0;
+        transition-duration: 1s;
+        position: fixed;
+        right: 0;
+        top: 48px;
+    }
+
+    #nav ul#menu li {
+        padding-bottom: 0.5rem;
+    }
+
+    #content {
+        padding-top: 150px;
+    }
+
+    .item_title {
+        margin-bottom: 1rem;
+    }
+
+    .item {
+        margin-bottom: 2rem;
+    }
+
+}
+
+
+@media only screen and (max-width : 450px){
+
+    #content {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    #content-width {
+        width: 100%;
+    }
+
+    .item {
+        padding-bottom: 2rem;
+        width: 100%;
+        overflow: hidden;
+    }
+    
+    a.item_title {
+        display: block;
+        padding-bottom: 1rem;
+    }
+    
+    a.item_image img {
+        max-width: 100%;
+    }
+}
+
+
+@media only screen and (min-width: 960px){
+
+}
+
+
