--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1> {{ page.title }}</h1>
+<h1 style="display: none;"> {{ page.title }}</h1>
 
 <div class="date"> {{ page.date | date: "%d %b %Y"}}</div>
 
