--- a/static/style/kinna.css
+++ b/static/style/kinna.css
@@ -68,14 +68,16 @@ hr {
 }
 
 #menuframe {
-    width: 100%;
+    width: 38rem;
     /*     padding: 0 2rem 0 2rem; */
     margin: auto;
     height: 234px;
     position: fixed;
     top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
     z-index: 300;
-    background-image: url(/static/images/mask_1.1.2.png);
+    background-image: url(/static/images/mask_1.1.3.png);
 }
 
 #nav-center {
@@ -286,10 +288,6 @@ a#show_nav {
 	padding-top: 47px;
     padding-left: 10rem;
 }
-
-    #nav-center {
-        padding-left: 2rem;
-    }
     
 #nav > a {
 	display: none;
@@ -457,6 +455,8 @@ ul#menu li a:hover, ul#menu ul li a:hover {
     #menuframe {
         height: 150px;
         background-position: center bottom;
+        left: 0;
+        transform: none;
     }
 
     #nav-center {
