--- a/static/style/kinna.css
+++ b/static/style/kinna.css
@@ -176,6 +176,7 @@ a#show_nav {
     vertical-align: middle;
     text-decoration: none;
     color: black;
+    font-weight: 400;
 }
 
 .item_image img {
@@ -205,7 +206,7 @@ a#show_nav {
 .news {
     width: 100%;
     padding-bottom: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     border-bottom-width: 2px;
     border-style: solid;
     border-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
