--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,11 +13,15 @@
         {% endif %}
     </title>
 
+
+    <!-- - JS -->
+    <script src="/static/js/kinna0100.js" type="text/javascript"></script>
+
     <!-- CSS -->
     <style>
      @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,200;0,400;1,200&display=swap');
     </style>
-    <link rel="stylesheet" href="/static/style/kinna.css">
+    <link rel="stylesheet" href="/static/style/kinna0100.css">
     
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
@@ -35,11 +39,9 @@
 
     <!--[if !IE]><!-->
     <script>
-        if("standalone"in window.navigator&&window.navigator.standalone){var noddy,remotes=!0;document.addEventListener("click",function(d){for(noddy=d.target;"A"!==noddy.nodeName&&"HTML"!==noddy.nodeName;)noddy=noddy.parentNode;"href"in noddy&&-1!==noddy.href.indexOf("http")&&-1==noddy.href.indexOf(".pdf")&&(-1!==noddy.href.indexOf(document.location.host)||remotes)&&(d.preventDefault(),document.location.href=noddy.href)},!1)}
+     if("standalone"in window.navigator&&window.navigator.standalone){var noddy,remotes=!0;document.addEventListener("click",function(d){for(noddy=d.target;"A"!==noddy.nodeName&&"HTML"!==noddy.nodeName;)noddy=noddy.parentNode;"href"in noddy&&-1!==noddy.href.indexOf("http")&&-1==noddy.href.indexOf(".pdf")&&(-1!==noddy.href.indexOf(document.location.host)||remotes)&&(d.preventDefault(),document.location.href=noddy.href)},!1)}
     </script>
     <!--<![endif]-->
-
-    <script src="/static/js/kinna.js" type="text/javascript"></script>
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
@@ -50,7 +52,7 @@
 
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-    <meta name="msapplication-TileImage" content="//images.quru.com/image?src=kwf/KWRoundel3-500.png&width=144&height=144&format=png" />
+    <meta name="msapplication-TileImage" content="/static/images/apple-touch-icon.png" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="application-name" content="Create" />
 
