--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,1 +1,9 @@
-    <!-- Include Analystics tags here -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VYPP014TRJ"></script>
+<script>
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+
+ gtag('config', 'G-VYPP014TRJ');
+</script>
