Add video optimisation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 {% include analytics.html %}
 {% include head.html %}
+{% if page.youtube-embed %}{% include filmstructure.html %}{% endif %}
 </head>
 
 <body>
