--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
     <style>
      @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,200;0,400;1,200&display=swap');
     </style>
-    <link rel="stylesheet" href="/static/style/kinna0101.css">
+    <link rel="stylesheet" href="/static/style/kinna0102.css">
     
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
@@ -89,5 +89,5 @@
     <meta property="og:type" content="article" /> <!-- or product -->
     <meta property="article:published_time" content="{{ site.time | date: %Y-%m-%dT%T%z" }}" />
     <script type="application/ld+json">
-    {"@type":"BlogPosting","url":"{{ site.url }}{{ page.url }}","headline":"{{ page.title }}","dateModified":"{{ page.date | date: "%Y-%m-%dT%T%z" }}","datePublished":"{{ page.date | date: "%Y-%m-%dT%T%z" }}","author":{"@type":"Organization","name":"Katie Walker Furniture"},"mainEntityOfPage":{"@type":"WebPage","@id":"{{ site.url }}{{ page.url }}"},"description":"{% if page.description %}{{ page.description | truncate: 200 }}{% else %}{{ site.description | truncate: 200  }}{% endif %}”)","@context":"https://schema.org"}</script>
+    {"@type":"BlogPosting","url":"{{ site.url }}{{ page.url }}","headline":"{{ page.title }}","dateModified":"{{ page.date | date: "%Y-%m-%dT%T%z" }}","datePublished":"{{ page.date | date: "%Y-%m-%dT%T%z" }}","author":{"@type":"Organization","name":"Kinna", "url": "https://www.kinna.co.uk"},"mainEntityOfPage":{"@type":"WebPage","@id":"{{ site.url }}{{ page.url }}"},"description":"{% if page.description %}{{ page.description | truncate: 200 }}{% else %}{{ site.description | truncate: 200  }}{% endif %}”)","@context":"https://schema.org"}</script>
 
