--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,8 +69,8 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32_1.1.1.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16_1.1.1.png">
     <link rel="manifest" href="/static/images/site.webmanifest">
 
     <!--[if lt IE 9]>
