Add social links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
         </div>
     </div>
 
+{% include social.html %}
+    
     <script type="text/javascript">
      function ready(fn) {
          if (document.addEventListener) {
