--- a/_includes/filmblock.html
+++ b/_includes/filmblock.html
@@ -1,4 +1,4 @@
 <div class="item" id="film-{{ post.title | remove: ' ' }}">
 <a href="{{ post.url }}" class="item_title">{{ post.title }}</a>
-<a href="{{ post.url }}" class="item_image"><img src="{{ post.image }}" alt="{{ post.title }}" /></a>
+<a href="{{ post.url }}" class="item_image"><img src="{{ post.image }}&amp;width=450" alt="{{ post.title }}" /></a>
 </div>
