--- a/static/style/kinna0104.css
+++ b/static/style/kinna0104.css
@@ -21,7 +21,8 @@ html {
     font-family: 'Be Vietnam Pro', Geneva, sans-serif;
     font-size: 18px;
     line-height: 24px;
-    font-weight: 200;  
+    font-weight: 200;
+    letter-spacing: 0.02rem;
 }
 
 body {
@@ -364,7 +365,7 @@ a#show_nav {
 	text-align:  left;
 	text-decoration: none;
 	height: 1.8rem;
-	padding: 0 2.8rem 0 0;
+	padding: 0 2.5rem 0 0;
 	display: inline-block;
 }
 
