--- a/static/style/kinna0104.css
+++ b/static/style/kinna0104.css
@@ -322,6 +322,30 @@ iframe .sound__artwork {
     cursor: pointer;
 }
 
+#about-head {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
+    width: 100%;
+    padding-bottom: 2rem;
+}
+
+#about-portrait {
+    width: 325;
+}
+
+#about-social {
+    padding-top: 30px;
+    text-align: right;
+}
+
+#about-social img {
+    width: 40px;
+    height: 40px;
+    padding: 20px;
+}
+
+
 @media only screen and (min-width: 760px){
 
 /* Main navigation layout */
