Social on contacts

--- a/static/style/kinna0104.css
+++ b/static/style/kinna0104.css
@@ -336,7 +336,7 @@ iframe .sound__artwork {
 
 #about-social {
     padding-top: 30px;
-    text-align: right;
+    text-align: center;
 }
 
 #about-social img {
