--- a/_includes/musicblock.html
+++ b/_includes/musicblock.html
@@ -1,4 +1,4 @@
 <div class="item" id="music_{{ post.title | remove: ' ' }}">
 <a href="{{ post.url }}" class="item_title">{{ post.title }}</a>
-<a href="{{ post.url }}" class="item_image"><img src="{{ post.image }}" alt="{{ post.title }}"/></a>
+<a href="{{ post.url }}" class="item_image"><img src="{{ post.image }}&width=450" alt="{{ post.title }}"/></a>
 </div>
